--- a/css/index.css
+++ b/css/index.css
@@ -199,7 +199,7 @@
      height: 100vh;
      width: 100%;
      background-image: url("../images/parallax9.jpg");
-     background-position: center;
+     background-position: top;
      background-size: cover;
      background-attachment: fixed
    }
