--- a/css/misDatos.css
+++ b/css/misDatos.css
@@ -26,7 +26,7 @@
    text-align: center;
 }
 .datos form{
-   
+
 }
 .datos label{
    font-size: 20px;
@@ -36,4 +36,17 @@
    border: none;
    font-size: 18px;
    color: rgb(180, 180, 180);
+   margin-bottom: 15px;
+}
+.btn-modificar{
+   background-color: rgb(34,54,63);
+   padding: 10px;
+   border-radius: 20px;
+   transition: 0.99s;
+}
+.btn-modificar:focus{
+   transform: scale(0.2);
+}
+.datos input.modificarDatos{
+   border: 1px solid rgba(34,54,63, 0.5);
 }
